operations/external/save-pixbuf: Don't waste memory

A GdkPixbuf takes 8 bits per channel, but only 3 or 4 bytes per pixel.
The later value should be used to allocate the buffer.

https://bugzilla.gnome.org/show_bug.cgi?id=779136